src/styles/_card.scss
.card {
  background: white;
  color: black;
  display: flex;
  box-shadow: 0 0 120px rgba(black, 0.2);
  overflow: hidden;
  position: relative;
  z-index: 2;
  transform: translate(0, 50px) scale(1.1);
  opacity: 0;
  &-imageWrapper {
    position: relative;
    width: 34%;
    overflow: hidden;
  }
  &-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: scale(1.5);
    object-fit: cover;
    object-position: center center;
  }
  &-content {
    padding: 90px 135px;
    width: 66%;
  }
  &-item {
    margin-bottom: 25px;
    a {
      text-decoration: none;
      transition: color 0.2s ease-in-out, background-size 0.2s ease-in;
      background-size: 0 4px, 100% 0;
      background-position: center 1.13em, center 1.15em;
      background-repeat: no-repeat;
      text-shadow: 3px 2px 0 white, -3px 2px 0 white, 0 3px white;
      &:hover, &[data-focus-visible-added] {
        background-size: 100% 4px, 100% 0;
      }
    }
  }
}

.gradient-background {
  padding: 200px 0;
  background-image: linear-gradient(to bottom, rgba(white, 0), white 90%);
  @media (max-width: 960px) {
    padding: 100px 0;
  }
  @media (max-width: 500px) {
    padding-top: 60px;
  }
}

@media (max-width: 960px) {
  .card {
    flex-direction: column-reverse;
    transform: translate(0, 0) scale(1);
    opacity: 1;
    &-imageWrapper {
      display: none;
    }
    &-content {
      padding: 40px;
      width: 100%;
    }
    &-item a {
      background-size: 0 3px, 100% 0;
      &:hover, &[data-focus-visible-added] {
        background-size: 100% 3px, 100% 0;
      }
    }
  }
}

@media (max-width: 500px) {
  .card {
    &-content {
      padding: 20px 30px;
    }
    &-item {
      margin-bottom: 0;
    }
  }
}

